lseg chatbot initial commit

--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-simple-chatbot": "^0.6.1",
+    "styled-components": "^4.4.1"
   }
 }
